syntax = "proto3";
package listah;

import "google/protobuf/timestamp.proto";

message Audit {
    AuditUpdaterEnum created_by = 1;
    google.protobuf.Timestamp created_at = 2;
    AuditUpdaterEnum updated_by = 50;
    google.protobuf.Timestamp updated_at = 51;
}

enum AuditUpdaterEnum {
    FRONTEND = 0;
    SYSOPS = 1;
    UNSPECIFIED = 3;
}